--- a/page1.html
+++ b/page1.html
@@ -1,11 +1,10 @@
-<!DOCTYPE html>
+<DOCTYPE html>
 <html>
 <head>
 	<meta charset="utf-8">
 	<title>testrepository</title>
 </head>
 <body>
-	<h1>HOGEHOGE</h1>
-	<a href="./page1.html>link to page1</a>
-</body>
+	<h1>page1.html</h1>
+<body>
 </html>
